{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 249,
  "lineage": "bbc660cf-3c4b-434e-3e6a-04106c98881b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa097a5c0d31430a",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:instance/i-07b8917c1a6c30330",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b8917c1a6c30330",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015699808eda1071c",
            "private_dns": "ip-10-0-2-169.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d5a3cbf9544362ca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9eb2b7618f2893d",
            "tags": {
              "Name": "Lab04-JaegEr-Test-private"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f1c5d924326bf6d5"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa097a5c0d31430a",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:instance/i-0a6da6b7d44b5dd18",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6da6b7d44b5dd18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07aea146ec288b0f1",
            "private_dns": "ip-10-0-3-39.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.39",
            "public_dns": "ec2-13-215-189-195.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.189.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088c660b4a1384db3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04789518b3776ae38",
            "tags": {
              "Name": "Lab04-JaegEr-Test-public"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f1c5d924326bf6d5"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49",
            "arn_suffix": "app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240930052126513600000009-1828584866.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240930052126513600000009",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f1c5d924326bf6d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04789518b3776ae38"
              },
              {
                "subnet_id": "subnet-0bd2f5c5db34f2bca"
              }
            ],
            "subnets": [
              "subnet-04789518b3776ae38",
              "subnet-0bd2f5c5db34f2bca"
            ],
            "tags": {
              "Name": "Lab04-JaegEr-Test-lb"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-lb"
            },
            "vpc_id": "vpc-0572477ed8b50ba27",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:listener/app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49/0b83bfa74e6c874e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:targetgroup/tf-20240930052115183700000001/abb91f421fb23104",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:listener/app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49/0b83bfa74e6c874e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.lab_lb",
            "module.lb.aws_lb_target_group.lab_tg",
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:targetgroup/tf-20240930052115183700000001/abb91f421fb23104",
            "arn_suffix": "targetgroup/tf-20240930052115183700000001/abb91f421fb23104",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:targetgroup/tf-20240930052115183700000001/abb91f421fb23104",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930052126513600000009/45c6a9ba68a05e49"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240930052115183700000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Lab04-JaegEr-Test-lb"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-lb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:security-group/sg-0f1c5d924326bf6d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1c5d924326bf6d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240930052115198800000002",
            "name_prefix": "terraform-",
            "owner_id": "325842618176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Lab04-JaegEr-Test-sg"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082eef7d6542ef95e",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:elastic-ip/eipalloc-082eef7d6542ef95e",
            "association_id": "eipassoc-0261e7aa4d2bfe5ec",
            "domain": "vpc",
            "id": "eipalloc-082eef7d6542ef95e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04358f2ee653115ad",
            "private_dns": "ip-10-0-3-153.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.153",
            "public_dns": "ec2-122-248-200-211.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "122.248.200.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:internet-gateway/igw-012751d199fe2f70a",
            "id": "igw-012751d199fe2f70a",
            "owner_id": "325842618176",
            "tags": {
              "Name": "Lab04-JaegEr-Test-igw"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-igw"
            },
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082eef7d6542ef95e",
            "association_id": "eipassoc-0261e7aa4d2bfe5ec",
            "connectivity_type": "public",
            "id": "nat-05fdf7070c15428f4",
            "network_interface_id": "eni-04358f2ee653115ad",
            "private_ip": "10.0.3.153",
            "public_ip": "122.248.200.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04789518b3776ae38",
            "tags": {
              "Name": "Lab04-JaegEr-Test-nat"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:route-table/rtb-0453407982ce5943d",
            "id": "rtb-0453407982ce5943d",
            "owner_id": "325842618176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05fdf7070c15428f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lab04-JaegEr-Test-private_route_table"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:route-table/rtb-019977e2a18ab9412",
            "id": "rtb-019977e2a18ab9412",
            "owner_id": "325842618176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012751d199fe2f70a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lab04-JaegEr-Test-public_route_table"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6609f78b9e94f89",
            "route_table_id": "rtb-0453407982ce5943d",
            "subnet_id": "subnet-015cdfd27a2d28d79"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0991239f5b942d932",
            "route_table_id": "rtb-0453407982ce5943d",
            "subnet_id": "subnet-0a9eb2b7618f2893d"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a074101a76bb62e",
            "route_table_id": "rtb-019977e2a18ab9412",
            "subnet_id": "subnet-04789518b3776ae38"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f2d7c74525a99f",
            "route_table_id": "rtb-019977e2a18ab9412",
            "subnet_id": "subnet-0bd2f5c5db34f2bca"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-015cdfd27a2d28d79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015cdfd27a2d28d79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab04-JaegEr-Test-private_subnet_a"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-private_subnet_a"
            },
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0a9eb2b7618f2893d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9eb2b7618f2893d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab04-JaegEr-Test-private_subnet_b"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-private_subnet_b"
            },
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-04789518b3776ae38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04789518b3776ae38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab04-JaegEr-Test-public_subnet_a"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-public_subnet_a"
            },
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0bd2f5c5db34f2bca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd2f5c5db34f2bca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab04-JaegEr-Test-public_subnet_b"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-public_subnet_b"
            },
            "vpc_id": "vpc-0572477ed8b50ba27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:vpc/vpc-0572477ed8b50ba27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090a033a6685c5680",
            "default_route_table_id": "rtb-09d6e84e73ec5964d",
            "default_security_group_id": "sg-053a6d3df2693b7dd",
            "dhcp_options_id": "dopt-02706d56e1ab7d416",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0572477ed8b50ba27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d6e84e73ec5964d",
            "owner_id": "325842618176",
            "tags": {
              "Name": "Lab04-JaegEr-Test-vpc"
            },
            "tags_all": {
              "Name": "Lab04-JaegEr-Test-vpc"
            }
          }
        }
      ]
    }
  ]
}